--- a/sway/config
+++ b/sway/config
@@ -14,7 +14,7 @@ set $down j
 set $up k
 set $right l
 # Your preferred terminal emulator
-set $term alacritty
+set $term gnome-terminal
 # Your preferred application launcher
 # Note: pass the final command to swaymsg so that the resulting window can be opened
 # on the original workspace that the command was run on.
@@ -23,7 +23,8 @@ set $term alacritty
 ### Output configuration
 #
 # Default wallpaper (more resolutions are available in /usr/share/backgrounds/sway/)
-output * bg $HOME/Wallpapers/main.png fill
+output * bg $HOME/Wallpapers/Outset_Island_day.png fill
+output HDMI-A-1 scale 1.2 res 3840x2160
 #
 # Example configuration:
 #
@@ -48,12 +49,15 @@ output * bg $HOME/Wallpapers/main.png fill
 #     resume 'swaymsg "output * dpms on"' \
 #     before-sleep '$screenlock'
 exec swayidle -w \
-	timeout 300 'swaylock -f' \
-	timeout 420 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
+	timeout 3000 'swaylock -f' \
+	timeout 4200 'swaymsg "output * dpms off"' resume 'swaymsg "output * dpms on"' \
 	before-sleep 'swaylock -f'
 exec emacs --daemon
 exec dbus-update-activation-environment --systemd DISPLAY WAYLAND_DISPLAY SWAYSOCK
 exec gnome-keyring-daemon --start
+exec swaync
+exec_always nm-applet --indicator
+
 bindsym Alt+Shift+l exec swaylock --indicator-idle-visible -f
 # This will lock your screen after 300 seconds of inactivity, then turn off
 # your displays after another 300 seconds, and turn your screens back on when
@@ -72,17 +76,25 @@ bindsym Alt+Shift+l exec swaylock --indicator-idle-visible -f
 #
 # You can get the names of your inputs by running: swaymsg -t get_inputs
 # Read `man 5 sway-input` for more information about this section.
-input "1:1:AT_Translated_Set_2_keyboard" {
-    xkb_layout dk
-}
+    #input "1:1:AT_Translated_Set_2_keyboard" {
+#}
 input 1739:52560:SYNA32AC:00_06CB:CD50_Touchpad {
     natural_scroll enabled
     pointer_accel 0.55
     tap enabled
+    dwt enabled
 }
+input 1133:16478:Logitech_M720_Triathlon {
+      pointer_accel -0.45
+}
+
 input "type:keyboard" {
-    xkb_options caps:escape
+    xkb_layout dk
+    xkb_options ctrl:nocaps
 }
+set $laptop eDP-1
+bindswitch --locked lid:off output $laptop enable
+bindswitch --locked lid:on output $laptop disable
 
 bindsym XF86AudioRaiseVolume exec pactl set-sink-volume @DEFAULT_SINK@ +5%
 bindsym XF86AudioLowerVolume exec pactl set-sink-volume @DEFAULT_SINK@ -5%
@@ -97,6 +109,8 @@ bindsym XF86AudioPrev exec playerctl previous
 #
 # Basics:
 #
+    font pango:Terminus 10
+
     # Start a terminal
     bindsym $mod+Return exec $term
 
@@ -107,7 +121,6 @@ bindsym XF86AudioPrev exec playerctl previous
     #bindsym $mod+d exec $menu
     set $highlight #3daee9
     set $uifont "Monospace 14"
-    set $menu bemenu-run --fn $uifont -b -p "▶" --tf "#A4B9EF" --hf "$highlight" --sf "$highlight" --scf "$highlight" | xargs swaymsg exec
     bindsym $mod+p exec bemenu-run --fn $uifont -b -p "▶" --tf "#A4B9EF" --hf "$highlight" --sf "$highlight" --scf "$highlight" | xargs swaymsg exec
     bindsym Alt+Space exec ulauncher
 
@@ -125,7 +138,7 @@ bindsym XF86AudioPrev exec playerctl previous
     bindsym $mod+Shift+e exec swaynag -t warning -m 'You pressed the exit shortcut. Do you really want to exit sway? This will end your Wayland session.' -b 'Yes, exit sway' 'swaymsg exit'
 
     bindsym $mod+e exec emacsclient -c
-    bindsym $mod+w exec chromium-freeworld
+    bindsym $mod+w exec chromium-browser
 
 #
 # Moving around:
@@ -188,9 +201,9 @@ bindsym XF86AudioPrev exec playerctl previous
     bindsym $mod+v splitv
 
     # Switch the current container between different layout styles
-    #bindsym $mod+s layout stacking
+    bindsym $mod+t layout tabbed
     #bindsym $mod+w layout tabbed
-    #bindsym $mod+s layout toggle split
+    bindsym $mod+s layout toggle split
 
     # Make the current focus fullscreen
     bindsym $mod+f fullscreen
@@ -237,6 +250,7 @@ mode "resize" {
     # Return to default mode
     bindsym Return mode "default"
     bindsym Escape mode "default"
+
 }
 bindsym $mod+r mode "resize"
 
@@ -245,17 +259,12 @@ bindsym $mod+r mode "resize"
 #
 # Read `man 5 sway-bar` for more information about this section.
 bar {
-    position top
-
-    swaybar_command waybar
+    #position top
+    #status_command i3status-rs
+    status_command i3status
+    swaybar_command swaybar
 }
 
 ##look
-gaps inner 15
-gaps outer 0
-client.focused          "#03c6fc" "#03c6fc" "#000000"
-client.focused_inactive "#000000" "#000000" "#000000"
-client.unfocused        "#000000" "#000000" "#000000"
-
-default_border pixel
+default_border normal 3
 default_floating_border none
