--- a/kitty/kitty.conf
+++ b/kitty/kitty.conf
@@ -1,9 +1,18 @@
-font_family JetBrains Mono
-font_size 12
-include solarized.conf
-#include darkside.conf
-#include dracula.conf
-#include encom.conf
-#shell /bin/zsh --login
+font_family monospace
+font_size 14
+enabled_layouts tall:bias=50;full_size=1;mirrored=false
+cursor_shape block
+window_border_width 1.5pt
+active_border_color #0000ff
 
+
+# Keys
+map alt+right next_window
+map alt+left previous_window
 map alt+enter new_window
+map alt+t new_tab
+map alt+shift+t launch --cwd=current --type=tab ranger
+map alt+c copy_to_clipboard
+map alt+v paste_from_clipboard
+map alt+shift+w close_window
+map alt+shift+enter launch --cwd=current ranger
